# yle-weekly-guide

./: .eslintrc.json  .gitignore  .stylelintrc.json  CHANGES.rst  README.rst  package.json  pyproject.toml  ruff.toml  run_lint.sh  run_tests.sh  schedule_analyzer.py  translations.js
.github/workflows/: pages.yml
docs/: conf.py  index.rst  javascript_testing.rst  ohjeet.fi.rst
templates/: __init__.py  html_generator.py  schedule.html  schedule.js  style.css  translations.js
tests/: schedule_highlight.test.js  test_html_generator.py  test_schedule_analyzer.py
